# texthero

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PURPOSE.md  README.md  STYLE.md  check.sh  format.sh  install.sh  push_pip.sh  pytest.ini  requirements.txt  setup.cfg  setup.py  texthero.md  update.sh
.github/workflows/: test.yml
dataset/: bbcsport.csv
dataset/Superheroes NLP Dataset/: README.md  create_dataset.py  create_download_file.py  helper.py
docs/: .buildinfo  Makefile  create_docs_from_py.sh  genindex.html  getting-started.md  index.html  objects.inv  test.md  to_docusaurus.py  tutorial-tfidf.md
docs/_sources/: index.rst.txt  representation.rst.txt  visualization.rst.txt
docs/source/: conf.py  index.rst  nlp.rst  preprocessing.rst  representation.rst  visualization.rst
docs/sphinx/: api-preprocessing.rst  api-representation.rst
docs_source/: Makefile  conf.py
examples/: BBC sport.ipynb  README.md  README.md.ipynb  getting-started.ipynb  reading_pdf_data.ipynb
scripts/: (OFRM)  check.sh  format.sh  install-hooks.sh  install.sh  pre-commit.sh  push_pip.sh  test_coverage.sh  tests.sh  update_documentation.sh
test_gio/: FirstTest.ipynb
tests/: README.md  __init__.py  conftest.py  test_doctest.sh  test_embeddings.py  test_helpers.py  test_indexes.py  test_nan.py  test_nlp.py  test_preprocessing.py  test_representation.py  test_types.py  test_visualization.py  tests_helper.py  tests_nan.py
tests/helpers/: __init__.py  my_helper.py
tests/unit/: test_example.py  test_version.py
texthero/: __about__.py  __init__.py  _helper.py  _types.py  config.py  embeddings.py  extend_pandas.py  helper.py  nlp.py  preprocessing.py  representation.py  stop_words.py  stopwords.py  texthero.py  version.py  visualization.py
texthero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
texthero/lang/: __init__.py
texthero/visualization_server/: __init__.py  _display.py  _server.py
website/: build.sh  package.json  sidebars.json  siteConfig.js
website/blog/: 2017-10-24-new-version-1.0.0.md  2017-10-24-texthero-welcome.md  2020-04-27-rename-columns-pandas.md  2020-04-27-text-preprocessing-with-pandas.md  2020-05-03-text-mining-with-python.md  2020-05-03-text-unsupervised-learning.md  2020-05-08-bar-run-chart-python.md  2020-07-25-read-pdf-data-into-texthero.md
website/core/: AnnouncementBar.js  Footer.js
website/docs/: api-nlp.md  api-preprocessing.md  api-representation.md  api-visualization.md  create_docs_with_sphinx.sh  different_series_types_tutorial.md  getting-started-heroseries.md  getting-started-herotypes.md  getting-started.md  (+6 more)
(+70 files in other folders)
