[metadata]
name = Texthero
version = 1.0.7
description = Text preprocessing, representation and visualization from zero to hero.
author = Jonathan Besomi
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python
    Natural Language :: English
    Topic :: Scientific/Engineering
keywords =
    text mining
    text preprocessing
    text representation
    text visualization
url = https://github.com/jbesomi/texthero
project_urls =
    Documentation = https://texthero.org/
    Source Code = https://github.com/jbesomi/texthero
    Bug Tracker = https://github.com/jbesomi/texthero/issues
[options]
packages = find:
python_requires = >=3.5
install_requires =
    numpy>=1.17
    scikit-learn>=0.22
    spacy>=2.2.2
    tqdm>=4.3
    nltk>=3.3
    plotly_express>=0.4.1
    pandas>=1.0.2
    wordcloud>=1.5.0
[options.extras_require]
dev =
    black>=19.10b0
    pytest>=4.0.0
    Sphinx>=3.0.3
    sphinx-markdown-builder>=0.5.4
    recommonmark>=0.6.0
    sphinx-autodoc-typehints>=1.10.3
